tests/invalid/except_unsupported_exception/main.py
try:
    x: int = 1
except FooError:
    x: int = 2
